@@ -8,6 +8,7 @@ UOFiddler based on Ultima SDK it's a tool to view and alter almost every UO 2D c
 Version : 4.11.25
 - New feature added: Names outsourced to Gumps and stored in an XML file, with custom formatting and editing based on ID.
 - Search function adjusted to include names as well.
+- Added sound button and disabled messages
 
 Version : 4.11.24
 - Added ItemControl a Built-in image swap function
