@@ -1,6 +1,7 @@
 Version : 4.11.25 #XG1
 - New feature added: Names outsourced to Gumps and stored in an XML file, with custom formatting and editing based on ID.
 - Search function adjusted to include names as well.
+- Added sound button and disabled messages
 
 Version : 4.11.24 #XG1
 - Added ItemControl a Built-in image swap function
